@@ -1,7 +1,7 @@
 /*
  * Axelor Business Solutions
  *
- * Copyright (C) 2005-2023 Axelor (<http://axelor.com>).
+ * Copyright (C) 2005-2026 Axelor (<http://axelor.com>).
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -23,9 +23,19 @@ import com.axelor.apps.account.db.PaymentCondition;
 import com.axelor.apps.account.db.PaymentMode;
 import com.axelor.apps.account.db.repo.InvoiceRepository;
 import com.axelor.apps.account.service.invoice.InvoiceViewService;
+import com.axelor.apps.base.AxelorException;
 import com.axelor.apps.base.db.Company;
 import com.axelor.apps.base.db.Partner;
+import com.axelor.apps.base.service.app.AppBaseService;
 import com.axelor.apps.base.service.exception.TraceBackService;
+import com.axelor.apps.purchase.db.PurchaseOrder;
+import com.axelor.apps.purchase.service.PurchaseOrderMergingService;
+import com.axelor.apps.purchase.service.PurchaseOrderMergingService.PurchaseOrderMergingResult;
+import com.axelor.apps.purchase.service.PurchaseOrderMergingViewService;
+import com.axelor.apps.sale.db.SaleOrder;
+import com.axelor.apps.sale.service.saleorder.merge.SaleOrderMergingService;
+import com.axelor.apps.sale.service.saleorder.merge.SaleOrderMergingService.SaleOrderMergingResult;
+import com.axelor.apps.sale.service.saleorder.merge.SaleOrderMergingViewService;
 import com.axelor.apps.stock.db.StockMove;
 import com.axelor.apps.stock.db.repo.StockMoveRepository;
 import com.axelor.apps.supplychain.db.SupplyChainConfig;
@@ -37,6 +47,7 @@ import com.axelor.apps.supplychain.service.config.SupplyChainConfigService;
 import com.axelor.apps.supplychain.translation.ITranslation;
 import com.axelor.auth.AuthUtils;
 import com.axelor.auth.db.User;
+import com.axelor.common.ObjectUtils;
 import com.axelor.db.JPA;
 import com.axelor.i18n.I18n;
 import com.axelor.inject.Beans;
@@ -46,13 +57,15 @@ import com.axelor.rpc.ActionRequest;
 import com.axelor.rpc.ActionResponse;
 import com.axelor.rpc.Context;
 import com.google.common.base.Joiner;
-import com.google.inject.Singleton;
+import jakarta.inject.Singleton;
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Singleton
 public class StockMoveInvoiceController {
@@ -72,29 +85,121 @@ public class StockMoveInvoiceController {
             Beans.get(StockMoveRepository.class)
                 .find(Long.parseLong(request.getContext().get("_id").toString()));
         stockMove = Beans.get(StockMoveRepository.class).find(stockMove.getId());
-        Invoice invoice =
-            Beans.get(StockMoveInvoiceService.class)
-                .createInvoice(stockMove, operationSelect, stockMoveLineListContext);
+        Invoice invoice = null;
 
+        StockMoveInvoiceService stockMoveInvoiceService = Beans.get(StockMoveInvoiceService.class);
+        Map<Long, BigDecimal> qtyToInvoiceMap =
+            stockMoveInvoiceService.getQtyToInvoiceMap(operationSelect, stockMoveLineListContext);
+        Set<SaleOrder> saleOrderSet = stockMove.getSaleOrderSet();
+        Set<PurchaseOrder> purchaseOrderSet = stockMove.getPurchaseOrderSet();
+
+        if (ObjectUtils.notEmpty(saleOrderSet)) {
+          if (saleOrderSet.size() > 1) {
+            SaleOrderMergingResult result =
+                Beans.get(SaleOrderMergingService.class)
+                    .simulateMergeSaleOrders(new ArrayList<>(saleOrderSet));
+            if (result.isConfirmationNeeded()) {
+              ActionViewBuilder confirmView =
+                  Beans.get(SaleOrderMergingViewService.class)
+                      .buildConfirmView(result, "saleOrderToMerge", new ArrayList<>(saleOrderSet));
+              confirmView.context("stockMoveId", stockMove.getId());
+              confirmView.context("qtyToInvoiceMap", qtyToInvoiceMap);
+              confirmView.context("fromStockMove", true);
+
+              response.setView(confirmView.map());
+              return;
+            }
+            invoice =
+                stockMoveInvoiceService.createInvoiceFromSaleOrder(
+                    stockMove, result.getSaleOrder(), qtyToInvoiceMap);
+          } else {
+            invoice =
+                stockMoveInvoiceService.createInvoiceFromSaleOrder(
+                    stockMove, saleOrderSet.iterator().next(), qtyToInvoiceMap);
+          }
+        } else if (ObjectUtils.notEmpty(purchaseOrderSet)) {
+          if (purchaseOrderSet.size() > 1) {
+            PurchaseOrderMergingResult result =
+                Beans.get(PurchaseOrderMergingService.class)
+                    .simulateMergePurchaseOrders(new ArrayList<>(purchaseOrderSet));
+            if (result.isConfirmationNeeded()) {
+              ActionViewBuilder confirmView =
+                  Beans.get(PurchaseOrderMergingViewService.class)
+                      .buildConfirmView(result, new ArrayList<>(purchaseOrderSet));
+              confirmView.context("stockMoveId", stockMove.getId());
+              confirmView.context("qtyToInvoiceMap", qtyToInvoiceMap);
+              confirmView.context("toStockMove", true);
+
+              response.setView(confirmView.map());
+              return;
+            }
+            invoice =
+                stockMoveInvoiceService.createInvoiceFromPurchaseOrder(
+                    stockMove, result.getPurchaseOrder(), qtyToInvoiceMap);
+          } else {
+            invoice =
+                stockMoveInvoiceService.createInvoiceFromPurchaseOrder(
+                    stockMove, purchaseOrderSet.iterator().next(), qtyToInvoiceMap);
+          }
+        } else {
+          invoice =
+              stockMoveInvoiceService.createInvoiceFromOrderlessStockMove(
+                  stockMove, qtyToInvoiceMap);
+        }
         if (invoice != null) {
-          // Open the generated invoice in a new tab
-          response.setView(
-              ActionView.define(I18n.get(ITranslation.INVOICE))
-                  .model(Invoice.class.getName())
-                  .add("grid", InvoiceViewService.computeInvoiceGridName(invoice))
-                  .add("form", "invoice-form")
-                  .param("search-filters", InvoiceViewService.computeInvoiceFilterName(invoice))
-                  .param("forceEdit", "true")
-                  .context("_showRecord", String.valueOf(invoice.getId()))
-                  .context("_operationTypeSelect", invoice.getOperationTypeSelect())
-                  .context(
-                      "todayDate",
-                      Beans.get(AppSupplychainService.class).getTodayDate(stockMove.getCompany()))
-                  .map());
-          response.setCanClose(true);
+          response.setView(getResponseView(invoice, stockMove));
         } else {
           response.setError(I18n.get(SupplychainExceptionMessage.STOCK_MOVE_NO_LINES_TO_INVOICE));
         }
+      }
+    } catch (Exception e) {
+      TraceBackService.trace(response, e);
+    }
+  }
+
+  @SuppressWarnings({"unchecked"})
+  public void generateInvoiceFromPopUp(ActionRequest request, ActionResponse response) {
+    try {
+      Context context = request.getContext();
+      StockMove stockMove =
+          Beans.get(StockMoveRepository.class)
+              .find(Long.parseLong(request.getContext().get("stockMoveId").toString()));
+      stockMove = Beans.get(StockMoveRepository.class).find(stockMove.getId());
+      Invoice invoice = null;
+      Map<Long, BigDecimal> qtyToInvoiceMap = null;
+      StockMoveInvoiceService stockMoveInvoiceService = Beans.get(StockMoveInvoiceService.class);
+
+      if (request.getContext().get("qtyToInvoiceMap") != null) {
+        qtyToInvoiceMap =
+            ((Map<String, Object>) request.getContext().get("qtyToInvoiceMap"))
+                .entrySet().stream()
+                    .collect(
+                        Collectors.toMap(
+                            k -> Long.parseLong(k.getKey()),
+                            v -> new BigDecimal(v.getValue().toString())));
+      }
+      if (ObjectUtils.notEmpty(stockMove.getSaleOrderSet())) {
+        SaleOrderMergingResult result =
+            Beans.get(SaleOrderMergingService.class)
+                .simulateMergeSaleOrdersWithContext(
+                    new ArrayList<>(stockMove.getSaleOrderSet()), context);
+        invoice =
+            stockMoveInvoiceService.createInvoiceFromSaleOrder(
+                stockMove, result.getSaleOrder(), qtyToInvoiceMap);
+      } else if (ObjectUtils.notEmpty(stockMove.getPurchaseOrderSet())) {
+        PurchaseOrderMergingResult result =
+            Beans.get(PurchaseOrderMergingService.class)
+                .simulateMergePurchaseOrdersWithContext(
+                    new ArrayList<>(stockMove.getPurchaseOrderSet()), context);
+        invoice =
+            stockMoveInvoiceService.createInvoiceFromPurchaseOrder(
+                stockMove, result.getPurchaseOrder(), qtyToInvoiceMap);
+      }
+      if (invoice != null) {
+        response.setCanClose(true);
+        response.setView(getResponseView(invoice, stockMove));
+      } else {
+        response.setError(I18n.get(SupplychainExceptionMessage.STOCK_MOVE_NO_LINES_TO_INVOICE));
       }
     } catch (Exception e) {
       TraceBackService.trace(response, e);
@@ -141,7 +246,7 @@ public class StockMoveInvoiceController {
             ActionView.define(I18n.get("StockMove"))
                 .model(StockMove.class.getName())
                 .add("form", "stock-move-supplychain-concat-cust-invoice-confirm-form")
-                .param("popup", "true")
+                .param("popup", "reload")
                 .param("show-toolbar", "false")
                 .param("show-confirm", "false")
                 .param("popup-save", "false")
@@ -176,10 +281,11 @@ public class StockMoveInvoiceController {
                 response.setView(
                     ActionView.define(I18n.get("Invoice"))
                         .model(Invoice.class.getName())
-                        .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                         .add("form", "invoice-form")
+                        .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                         .param("search-filters", InvoiceViewService.computeInvoiceFilterName(inv))
                         .param("forceEdit", "true")
+                        .domain("self.id = " + inv.getId())
                         .context("_operationTypeSelect", inv.getOperationTypeSelect())
                         .context(
                             "todayDate",
@@ -187,6 +293,7 @@ public class StockMoveInvoiceController {
                                 .getTodayDate(stockMove.getCompany()))
                         .context("_showRecord", String.valueOf(inv.getId()))
                         .map());
+                response.setReload(true);
               } catch (Exception e) {
                 TraceBackService.trace(response, e);
               }
@@ -213,7 +320,7 @@ public class StockMoveInvoiceController {
       String stockMoveListStr = (String) request.getContext().get("customerStockMoveToInvoice");
 
       for (String stockMoveId : stockMoveListStr.split(",")) {
-        stockMoveList.add(JPA.em().find(StockMove.class, new Long(stockMoveId)));
+        stockMoveList.add(JPA.em().find(StockMove.class, Long.valueOf(stockMoveId)));
       }
 
       // Check if paymentCondition, paymentMode or contactPartner are content in parameters
@@ -256,10 +363,11 @@ public class StockMoveInvoiceController {
               response.setView(
                   ActionView.define(I18n.get("Invoice"))
                       .model(Invoice.class.getName())
-                      .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                       .add("form", "invoice-form")
+                      .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                       .param("search-filters", InvoiceViewService.computeInvoiceFilterName(inv))
                       .param("forceEdit", "true")
+                      .domain("self.id = " + inv.getId())
                       .context("_showRecord", String.valueOf(inv.getId()))
                       .context("_operationTypeSelect", inv.getOperationTypeSelect())
                       .context(
@@ -313,7 +421,7 @@ public class StockMoveInvoiceController {
             ActionView.define(I18n.get("StockMove"))
                 .model(StockMove.class.getName())
                 .add("form", "stock-move-supplychain-concat-suppl-invoice-confirm-form")
-                .param("popup", "true")
+                .param("popup", "reload")
                 .param("show-toolbar", "false")
                 .param("show-confirm", "false")
                 .param("popup-save", "false")
@@ -349,16 +457,18 @@ public class StockMoveInvoiceController {
                 response.setView(
                     ActionView.define(I18n.get("Invoice"))
                         .model(Invoice.class.getName())
-                        .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                         .add("form", "invoice-form")
+                        .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                         .param("search-filters", InvoiceViewService.computeInvoiceFilterName(inv))
                         .param("forceEdit", "true")
+                        .domain("self.id = " + inv.getId())
                         .context("_showRecord", String.valueOf(inv.getId()))
                         .context("_operationTypeSelect", inv.getOperationTypeSelect())
                         .context(
                             "todayDate",
                             Beans.get(AppSupplychainService.class).getTodayDate(inv.getCompany()))
                         .map());
+                response.setReload(true);
               } catch (Exception e) {
                 TraceBackService.trace(response, e);
               }
@@ -384,7 +494,7 @@ public class StockMoveInvoiceController {
       String stockMoveListStr = (String) request.getContext().get("supplierStockMoveToInvoice");
 
       for (String stockMoveId : stockMoveListStr.split(",")) {
-        stockMoveList.add(JPA.em().find(StockMove.class, new Long(stockMoveId)));
+        stockMoveList.add(JPA.em().find(StockMove.class, Long.valueOf(stockMoveId)));
       }
 
       PaymentCondition paymentCondition = null;
@@ -424,10 +534,11 @@ public class StockMoveInvoiceController {
               response.setView(
                   ActionView.define(I18n.get("Invoice"))
                       .model(Invoice.class.getName())
-                      .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                       .add("form", "invoice-form")
+                      .add("grid", InvoiceViewService.computeInvoiceGridName(inv))
                       .param("search-filters", InvoiceViewService.computeInvoiceFilterName(inv))
                       .param("forceEdit", "true")
+                      .domain("self.id = " + inv.getId())
                       .context("_showRecord", String.valueOf(inv.getId()))
                       .context("_operationTypeSelect", inv.getOperationTypeSelect())
                       .context(
@@ -485,6 +596,7 @@ public class StockMoveInvoiceController {
                             .orElse(null)));
 
         response.setView(viewBuilder.map());
+        response.setReload(true);
       }
       if (warningMessage != null && !warningMessage.isEmpty()) {
         response.setInfo(warningMessage);
@@ -535,6 +647,7 @@ public class StockMoveInvoiceController {
                             .orElse(null)));
 
         response.setView(viewBuilder.map());
+        response.setReload(true);
       }
       if (warningMessage != null && !warningMessage.isEmpty()) {
         response.setInfo(warningMessage);
@@ -560,6 +673,8 @@ public class StockMoveInvoiceController {
       List<Map<String, Object>> stockMoveLines =
           Beans.get(StockMoveInvoiceService.class).getStockMoveLinesToInvoice(stockMove);
       response.setValue("$stockMoveLines", stockMoveLines);
+      response.setValue(
+          "$nbDecimalDigitForQty", Beans.get(AppBaseService.class).getNbDecimalDigitForQty());
     } catch (Exception e) {
       TraceBackService.trace(response, e);
     }
@@ -581,6 +696,7 @@ public class StockMoveInvoiceController {
                   && supplyChainConfig.getActivateIncStockMovePartialInvoicing())
               || (stockMove.getTypeSelect() == StockMoveRepository.TYPE_OUTGOING
                   && supplyChainConfig.getActivateOutStockMovePartialInvoicing());
+      Invoice invoice = null;
 
       if (isPartialInvoicingActivated && !stockMoveLines.isEmpty()) {
         // open wizard view for partial invoicing
@@ -596,22 +712,54 @@ public class StockMoveInvoiceController {
                 .context("_id", stockMove.getId())
                 .map());
       } else if (!stockMoveLines.isEmpty()) {
-        // invoice everything if config is disabled.
-        Invoice invoice =
-            stockMoveInvoiceService.createInvoice(stockMove, StockMoveRepository.INVOICE_ALL, null);
+
+        Set<SaleOrder> saleOrderSet = stockMove.getSaleOrderSet();
+        Set<PurchaseOrder> purchaseOrderSet = stockMove.getPurchaseOrderSet();
+
+        if (ObjectUtils.notEmpty(saleOrderSet)) {
+          SaleOrder saleOrder = null;
+          if (saleOrderSet.size() == 1) {
+            saleOrder = saleOrderSet.iterator().next();
+          } else {
+            SaleOrderMergingResult result =
+                Beans.get(SaleOrderMergingService.class)
+                    .simulateMergeSaleOrders(new ArrayList<>(saleOrderSet));
+            saleOrder = result.getSaleOrder();
+
+            if (result.isConfirmationNeeded()) {
+              ActionViewBuilder confirmView =
+                  Beans.get(SaleOrderMergingViewService.class)
+                      .buildConfirmView(result, "saleOrderToMerge", new ArrayList<>(saleOrderSet));
+              confirmView.context("stockMoveId", stockMove.getId());
+              confirmView.context("fromStockMove", true);
+
+              response.setView(confirmView.map());
+              return;
+            }
+          }
+          invoice = stockMoveInvoiceService.createInvoiceFromSaleOrder(stockMove, saleOrder, null);
+        } else if (ObjectUtils.notEmpty(purchaseOrderSet)) {
+          PurchaseOrderMergingResult result =
+              Beans.get(PurchaseOrderMergingService.class)
+                  .simulateMergePurchaseOrders(new ArrayList<>(purchaseOrderSet));
+          if (result.isConfirmationNeeded()) {
+            ActionViewBuilder confirmView =
+                Beans.get(PurchaseOrderMergingViewService.class)
+                    .buildConfirmView(result, new ArrayList<>(purchaseOrderSet));
+            confirmView.context("stockMoveId", stockMove.getId());
+            confirmView.context("toStockMove", true);
+
+            response.setView(confirmView.map());
+            return;
+          }
+          invoice =
+              stockMoveInvoiceService.createInvoiceFromPurchaseOrder(
+                  stockMove, result.getPurchaseOrder(), null);
+        } else {
+          invoice = stockMoveInvoiceService.createInvoiceFromOrderlessStockMove(stockMove, null);
+        }
         if (invoice != null) {
-          response.setView(
-              ActionView.define(I18n.get(ITranslation.INVOICE))
-                  .model(Invoice.class.getName())
-                  .add("grid", InvoiceViewService.computeInvoiceGridName(invoice))
-                  .add("form", "invoice-form")
-                  .param("search-filters", InvoiceViewService.computeInvoiceFilterName(invoice))
-                  .param("forceEdit", "true")
-                  .context("_showRecord", String.valueOf(invoice.getId()))
-                  .context("_operationTypeSelect", invoice.getOperationTypeSelect())
-                  .context(
-                      "todayDate", Beans.get(AppSupplychainService.class).getTodayDate(company))
-                  .map());
+          response.setView(getResponseView(invoice, stockMove));
         }
       } else {
         response.setAlert(I18n.get(SupplychainExceptionMessage.STOCK_MOVE_INVOICE_ERROR));
@@ -619,5 +767,21 @@ public class StockMoveInvoiceController {
     } catch (Exception e) {
       TraceBackService.trace(response, e);
     }
+  }
+
+  protected Map<String, Object> getResponseView(Invoice invoice, StockMove stockMove)
+      throws AxelorException {
+    return ActionView.define(I18n.get(ITranslation.INVOICE))
+        .model(Invoice.class.getName())
+        .add("grid", InvoiceViewService.computeInvoiceGridName(invoice))
+        .add("form", "invoice-form")
+        .param("search-filters", InvoiceViewService.computeInvoiceFilterName(invoice))
+        .param("forceEdit", "true")
+        .context("_showRecord", String.valueOf(invoice.getId()))
+        .context("_operationTypeSelect", invoice.getOperationTypeSelect())
+        .context(
+            "todayDate",
+            Beans.get(AppSupplychainService.class).getTodayDate(stockMove.getCompany()))
+        .map();
   }
 }
